--- a/cards.css
+++ b/cards.css
@@ -44,7 +44,7 @@ body{
 }
 /* drawing the cards */
 .card{
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgba(0, 0, 0, 0.6);
     position: absolute;
     transition: transform 800ms cubic-bezier(.05,.43,.25,.95);
     background-position: center;
@@ -52,6 +52,7 @@ body{
 }
 .big-card{
     border-radius: 5vmin;
+    transition: 500ms;
 }
 .little-card{
     width: 12vmin;
@@ -60,23 +61,33 @@ body{
     top: 50%;
     transform: translate(-50%, -50%);
     pointer-events: none;
+    box-shadow: -1vmin 1vmin 2vmin rgba(0, 0, 0, 0.6);
+    transition: 500ms;
 }
+.card-group:hover > .card {  
+    transition: 500ms;
+    box-shadow: -2vmin 2vmin 3vmin rgba(0, 0, 0, 0.4);
+  }
 /* card pictures + positioning */
 .big-card:nth-child(2){
     background-image: url(big/1.png);
     transform: translateX(-10%) rotate(-1deg);
+    box-shadow: -1vmin 1vmin 2vmin rgba(0, 0, 0, 0.25);
 }
 .big-card:nth-child(4){
     background-image: url(big/2.png);
     transform: rotate(2deg);
+    box-shadow: -1vmin 1vmin 2vmin rgba(0, 0, 0, 0.25);
 }
 .big-card:nth-child(6){
     background-image: url(big/3.png);
     transform: translateX(-6%) rotate(-3deg);
+    box-shadow: -1vmin 1vmin 2vmin rgba(0, 0, 0, 0.25);
 }
 .big-card:nth-child(8){
     background-image: url(big/4.png);
     transform: translate(10%, 3%) rotate(5deg);
+    box-shadow: -1vmin 1vmin 2vmin rgba(0, 0, 0, 0.25);
 }
 /* second & third card picture + positioning */
 .card-group[data-index="1"] > .big-card:nth-child(6){
@@ -145,20 +156,20 @@ body{
 }
 /* buttons */
 .card-swiper-buttons{
-    margin-top: 8vmin;
+    margin-top: 9vmin;
     display: flex;
     justify-content: space-around;
     padding: 0vmin 2vmin;
 }
 .card-swiper-buttons > button{
-    font-size: 2.5vmin;
+    font-size: 5vmin;
     border: 0.4vmin solid #4b4b4b;
     transition: 500ms;
     border-radius: 100%;
     color: #4b4b4b;
     background-color: transparent;
-    height: 7vmin;
-    width: 7vmin;
+    height: 8vmin;
+    width: 8vmin;
     display: grid;
     place-items: center;
     cursor: pointer;
