--- a/index.css
+++ b/index.css
@@ -170,7 +170,7 @@ body{
 }
 .card-swiper-buttons > button{
     font-size: 4vmin;
-    border: .75vmin solid #d4d4d4;
+    border: 1vmin solid #d4d4d4;
     transition: 500ms;
     border-radius: 100%;
     color: #fff;
@@ -180,53 +180,35 @@ body{
     display: grid;
     place-items: center;
     cursor: pointer;
-    box-shadow: 0 0 0 1px #bbbbbb inset,
-    0 0 0 2px rgba(255,255,255,0.15) inset,
-    0 8px 0 0 #bbbbbb,
-    0 8px 0 1px #bbbbbb66,
-    0 8px 8px 1px #00000080;
+    box-shadow: 0 0 0 1px #bbb inset,    0 0 0 4px #ffffff26 inset, 0 4px 0 0 #bbbbbb,    0 8px 0 1px #bbbbbb66,    0 8px 8px 1px #00000080;
 }
 /* button hover color */
 #next-button:hover{
     border: 1vmin solid #7fccde;
     background-color: #7fccde;
-    transition: 250ms;
+    transition: 0ms;
     color: #fff;
-	box-shadow: 0 0 0 1px #4b7882 inset,
-	0 0 0 2px rgba(255,255,255,0.15) inset,
-	0 8px 0 0 #4b7882,
-    0 8px 0 1px #bbbbbb66,
-    0 8px 8px 1px #00000080;
+    box-shadow: 0 0 0 1px #69a7b5 inset,	0 0 0 4px #ffffff26 inset,	0 4px 0 0 #6dafbe,    0 8px 0 1px #bbbbbb66,    0 8px 8px 1px #00000080;
 }
 #back-button:hover{
     border: 1vmin solid #fa5a5a;
     background-color: #fa5a5a;
-    transition: 250ms;
+    transition: 0ms;
     color: #fff;
-    box-shadow: 0 0 0 1px #C24032 inset,
-    0 0 0 2px rgba(255,255,255,0.15) inset,
-    0 8px 0 0 #C24032,
-    0 8px 0 1px #bbbbbb66,
-    0 8px 8px 1px #00000080;
+    box-shadow: 0 0 0 1px #dc4f4f inset,    0 0 0 4px #ffffff26 inset, 0 4px 0 0 #dc4f4f,    0 8px 0 1px #bbbbbb66,    0 8px 8px 1px #00000080;
 }
 /* button active color */
 #next-button:active{
-    border: 1vmin solid #7ac4d5;
-    background-color: #7ac4d5;
+    border: 1vmin solid #6dafbe;
+    background-color: #6dafbe;
     transition: 0ms;
-    box-shadow: 0 0 0 1px #4b7882 inset,
-	0 0 0 2px rgba(255,255,255,0.15) inset,
-	0 8px 0 0 #4b7882,
-    0 8px 0 1px #bbbbbb66,
-    0 8px 8px 1px #00000080;
+    box-shadow: 0 0 0 1px #69a7b5 inset, 0 0 0 4px #ffffff26 inset;
+    position:relative; top: 4px
 }
 #back-button:active{
-    border: 1vmin solid #e65252;
-    background-color: #e65252;
+    border: 1vmin solid #ea5151;
+    background-color: #ea5151;
     transition: 0ms;
-    box-shadow: 0 0 0 1px #C24032 inset,
-    0 0 0 2px rgba(255,255,255,0.15) inset,
-    0 8px 0 0 #C24032,
-    0 8px 0 1px #bbbbbb66,
-    0 8px 8px 1px #00000080;
+    box-shadow: 0 0 0 1px #dc4f4f inset, 0 0 0 4px #ffffff26 inset;
+    position:relative; top: 4px;
 }
